--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,16 +19,15 @@
   timestamp = {2009.06.06}
 }
 
-@article{ArnoldBrezziFortin1984,
-  author = {Arnold, D. N. and Brezzi, F. and Fortin, M.},
-  title = {A stable finite element for the {S}tokes equations},
-  journal = {Calcolo},
-  fjournal = {Calcolo. A Quarterly on Numerical Analysis and Theory of Computation},
-  volume = {21},
-  year = {1984},
-  number = {4},
-  pages = {337--344 (1985)},
-  pdf = {http://umn.edu/~arnold/papers/mini.pdf}
+@article {ArnoldBrezziFortin1984,
+   author = {Arnold, D. N. and Brezzi, F. and Fortin, M.},
+   title = {A stable finite element for the {S}tokes equations},
+   journal = {Calcolo},
+   pages = {337-344},
+   volume = {21},
+   issue = {4},
+   url = {http://dx.doi.org/10.1007/BF02576171},
+   year = {1984}
 }
 
 @ARTICLE{OlgaardLoggWells2008,
@@ -398,11 +397,6 @@
   volume = {77},
   pages = {1229--1251},
   number = {263},
-  coden = {MCMPAF},
-  fjournal = {Mathematics of Computation},
-  issn = {0025-5718},
-  owner = {kent-and},
-  timestamp = {2009.06.08}
 }
 
 @ARTICLE{ArnoldBrezzi1985,
@@ -414,29 +408,18 @@
   volume = {19},
   pages = {7--32},
   number = {1},
-  fjournal = {RAIRO Mod\'elisation Math\'ematique et Analyse Num\'erique},
-  issn = {0764-583X},
-  mrclass = {65N30},
-  mrnumber = {MR813687 (87g:65126)},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ArnoldBrezziDouglas1984,
   author = {Arnold, Douglas N. and Brezzi, Franco and Douglas, Jr., Jim},
-  title = {P{EERS}: a new mixed finite element for plane elasticity},
+  title = {{PEERS}: a new mixed finite element for plane elasticity},
   journal = {Japan J. Appl. Math.},
   year = {1984},
   volume = {1},
+  issue = {2},
   pages = {347--367},
   number = {2},
-  fjournal = {Japan Journal of Applied Mathematics},
-  issn = {0910-2043},
-  mrclass = {65N30 (73-08)},
-  mrnumber = {MR840802 (87h:65189)},
-  mrreviewer = {C. Dierieck},
-  owner = {logg},
-  timestamp = {2009.06.06}
+  url = {http://dx.doi.org/10.1007/BF03167064},
 }
 
 @ARTICLE{ArnoldFalk1989,
@@ -447,11 +430,8 @@
   year = {1989},
   volume = {26},
   pages = {1276--1290},
-  doi = {10.1137/0726074},
-  fjournal = {SIAM Journal on Numerical Analysis},
+  url = {http://dx.doi.org/10.1137/0726074},
   issue = {6},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ArnoldFalkWinther2007,
@@ -463,8 +443,6 @@
   volume = {76},
   pages = {1699--1723},
   number = {260},
-  coden = {MCMPAF},
-  issn = {0025-5718}
 }
 
 @ARTICLE{ArnoldFalkWinther2007a,
@@ -474,25 +452,17 @@
   journal = {Math. Comp.},
   year = {2007},
   volume = {76},
-  pages = {1699--1723 (electronic)},
+  pages = {1699--1723},
   number = {260},
-  coden = {MCMPAF},
-  fjournal = {Mathematics of Computation},
-  issn = {0025-5718},
-  mrclass = {74S05 (65N30 74B05 74G15)},
-  mrnumber = {MR2336264 (2008k:74057)},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ArnoldFalkWinther2006,
   author = {Arnold, D. N. and Falk, R. S. and Winther, R.},
-  title = {{Finite element exterior calculus, homological techniques, and applications}},
+  title = {Finite element exterior calculus, homological techniques, and applications},
   journal = {Acta Numerica},
   year = {2006},
   volume = {15},
   pages = {1--155},
-  publisher = {Cambridge Univ Press}
 }
 
 @INCOLLECTION{ArnoldFalkWinther2006c,
@@ -506,11 +476,6 @@
   series = {IMA Vol. Math. Appl.},
   pages = {47--67},
   address = {New York},
-  mrclass = {65N30 (58A12 74G15 74S05)},
-  mrnumber = {MR2249345 (2008c:65307)},
-  mrreviewer = {B. Kellogg},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ArnoldFalkWinther2006d,
@@ -520,11 +485,6 @@
   year = {2006},
   volume = {15},
   pages = {1--155},
-  fjournal = {Acta Numerica},
-  issn = {0962-4929},
-  mrclass = {58A15 (47N40 65N30 74G15 74S05)},
-  mrnumber = {MR2269741 (2007j:58002)},
-  mrreviewer = {Thomas Garrity}
 }
 
 @ARTICLE{ArnoldFalkWinther2000,
@@ -532,8 +492,8 @@
   title = {Multigrid in {H}(div) and {H}(curl)},
   journal = {Numerische Mathematik},
   year = {2000},
-  volume = { 85 },
-  pages = { 197--217}
+  volume = {85},
+  pages = {197--217}
 }
 
 @ARTICLE{ArnoldFalkWinther1998,
@@ -554,7 +514,6 @@
   volume = {31},
   pages = {517--557},
   number = {4},
-  issn = {0764-583X}
 }
 
 @ARTICLE{ArnoldFalkWinther1997a,
@@ -573,7 +532,8 @@
   year = {2009},
   volume = {46},
   pages = {245--260},
-  number = {4}
+  number = {4},
+  url = {http://dx.doi.org/10.1007/s10092-009-0009-6}
 }
 
 @ARTICLE{ArnoldWinther2002,
@@ -584,14 +544,6 @@
   volume = {92},
   pages = {401--419},
   number = {3},
-  coden = {NUMMA7},
-  fjournal = {Numerische Mathematik},
-  issn = {0029-599X},
-  mrclass = {65N30 (65N12 65N15 74G15 74S05)},
-  mrnumber = {MR1930384 (2003i:65103)},
-  mrreviewer = {Carsten Carstensen},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @TECHREPORT{AsanovicBodikCatanzaroEtAl2006,
@@ -615,16 +567,6 @@
   author = {U. M. Ascher and L. R. Petzold},
   owner = {logg},
   timestamp = {2009.06.06}
-}
-
-@ARTICLE{AuthorAuthor2006,
-  author = {First Author and Second Author},
-  title = {Title of some article},
-  journal = {Some journal where the article is published},
-  year = {2006},
-  volume = {30},
-  pages = {3123--3156},
-  number = {21}
 }
 
 @ARTICLE{AvrahamiRosenfeldRazEtAl2006,
@@ -659,10 +601,10 @@
   author = {O. Axelsson and M. Neytcheva},
   title = {Preconditioning methods for linear systems arising in constrained
 	optimization problems},
-  journal = { Numerical Linear Algebra with Applications},
+  journal = {Numerical Linear Algebra with Applications},
   year = {2003},
   volume = {10},
-  pages = {3–-31}
+  pages = {3--31}
 }
 
 @ARTICLE{Bansch1991,
@@ -675,20 +617,16 @@
   pages = {3--28},
   number = {1},
   address = {Amsterdam, The Netherlands, The Netherlands},
-  doi = {http://dx.doi.org/10.1016/0377-0427(91)90224-8},
-  issn = {0377-0427},
-  owner = {logg},
-  publisher = {Elsevier Science Publishers B. V.},
-  timestamp = {2009.06.07}
+  url = {http://dx.doi.org/10.1016/0377-0427(91)90224-8},
 }
 
 @ARTICLE{Babuvska1971,
   author = {I. Babu\v{s}ka},
-  title = {Error bounds for finite element methods },
+  title = {Error bounds for finite element methods},
   journal = {Numerische Mathematik},
   year = {1971},
-  volume = {16 },
-  pages = { 322--333}
+  volume = {16},
+  pages = {322--333}
 }
 
 @INCOLLECTION{BabuvskaAziz1972,
@@ -727,14 +665,10 @@
 
 @ARTICLE{BabuskaRheinboldt1978,
   author = {Babuska, I. and Rheinboldt, WC},
-  title = {{Error estimates for adaptive finite element computations}},
+  title = {Error estimates for adaptive finite element computations},
   journal = {SIAM Journal on Numerical Analysis},
   year = {1978},
   pages = {736--754},
-  file = {BabuskaRheinboldt1978.pdf:BabuskaRheinboldt1978.pdf:PDF},
-  owner = {massing},
-  publisher = {Society for Industrial and Applied Mathematics},
-  timestamp = {2009.05.27}
 }
 
 @ARTICLE{Babuvska1972/73,
@@ -758,10 +692,6 @@
   volume = {57},
   pages = {1009--1028},
   number = {6},
-  file = {:BabuskaEtAl1994.pdf:PDF},
-  owner = {massing},
-  publisher = {Elsevier},
-  timestamp = {2009.05.27}
 }
 
 @TECHREPORT{BagheriScott2004,
@@ -861,15 +791,15 @@
   author = {Batchelor, G. K.}
 }
 
-@ARTICLE{BauerFrinkKreckel2000,
-  author = {Christian Bauer and Alexander Frink and Richard Kreckel},
-  title = {Introduction to the {GiNaC} Framework for Symbolic Computation within
-	the {C++} Programming Language},
-  journal = {cs/0004015},
-  year = {2000},
-  owner = {logg},
-  timestamp = {2009.06.07},
-  url = {http://arxiv.org/abs/cs/0004015}
+@article{BauerFrinkKreckel2000,
+title = {Introduction to the {GiNaC} Framework for Symbolic Computation within the {C++} Programming Language},
+journal = {Journal of Symbolic Computation},
+volume = {33},
+number = {1},
+pages = {1-1},
+year = {2002},
+url = {http://dx.doi.org/10.1006/jsco.2001.0494},
+author = "Christian Bauer and Alexander Frink and Richard Kreckel"
 }
 
 @ARTICLE{BazilevsHsuZhangEtAl2010,
@@ -879,7 +809,7 @@
 	and application to cerebral aneurysms},
   journal = {Biomechanics and Modeling in Mechanobiology},
   year = {2010},
-  doi = {10.1007/s10237-010-0189-7}
+  url = {http://dx.doi.org/10.1007/s10237-010-0189-7}
 }
 
 @MISC{Beazleyothers2009,
@@ -977,8 +907,8 @@
 
 @ARTICLE{BengzonLarson2010,
   author = {Bengzon, F. and Larson, M. G.},
-  title = {{Adaptive finite element approximation of multiphysics problems:
-	A fluid-structure interaction model problem}},
+  title = {Adaptive finite element approximation of multiphysics problems:
+	{A} fluid-structure interaction model problem},
   journal = {International Journal for Numerical Methods in Engineering},
   year = {2010},
   publisher = {John Wiley \& Sons}
@@ -1017,7 +947,6 @@
   year = {2005},
   volume = {14},
   pages = {1--137},
-  issn = {0962-4929}
 }
 
 @ARTICLE{BenziLiu2007,
@@ -1029,7 +958,6 @@
   volume = {84},
   pages = {1117--1129},
   number = {8},
-  issn = {0020-7160}
 }
 
 @UNPUBLISHED{BenziOlshanskiiWang,
@@ -1102,10 +1030,9 @@
 }
 
 @ARTICLE{BientinesiGunnelsMyersEtAl2005,
-  author = {Bientinesi, Paolo and Gunnels, John a. and Myers, Margaret E. and
-                  Quintana-Ort\'{\i}, Enrique S. and Geijn, Robert a. Van De},
+  author = {Bientinesi, Paolo and Gunnels, John A. and Myers, Margaret E. and
+                  Quintana-Ort\'{\i}, Enrique S. and van de Geijn, Robert A.},
   journal = {ACM Transactions on Mathematical Software},
-  month = {March},
   number = {1},
   pages = {1--26},
   title = {The science of deriving dense linear algebra algorithms},
@@ -1173,9 +1100,6 @@
   volume = {28},
   pages = {135--151},
   number = {2},
-  issn = {0098-3500},
-  owner = {logg},
-  timestamp = {2009.06.06},
   url = {http://dx.doi.org/10.1145/567806.567807}
 }
 
@@ -1284,9 +1208,6 @@
   volume = {33},
   pages = {13--30},
   number = {1-2},
-  note = {Approximation theory and applications},
-  coden = {CMAPDK},
-  issn = {0898-1221}
 }
 
 @ARTICLE{BramblePasciak1988,
@@ -1353,8 +1274,6 @@
   volume = {53},
   pages = {225--235},
   number = {1-2},
-  coden = {NUMMA7},
-  issn = {0029-599X}
 }
 
 @ARTICLE{Brezzi1974,
@@ -1618,8 +1537,6 @@
   volume = {8},
   pages = {869--895},
   number = {8},
-  coden = {IJNFDW},
-  issn = {0271-2091}
 }
 
 @INCOLLECTION{Cai2003,
@@ -1980,13 +1897,6 @@
   year = {1972},
   volume = {46},
   pages = {177--199},
-  fjournal = {Archive for Rational Mechanics and Analysis},
-  issn = {0003-9527},
-  mrclass = {65D05 (41A05)},
-  mrnumber = {MR0336957 (49 \#1730)},
-  mrreviewer = {C. A. Hall},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @misc{Cimrman2008,
@@ -2409,7 +2319,6 @@
   pages = {75--89},
   number = {1-2},
   note = {19th Dundee Biennial Conference on Numerical Analysis (2001)},
-  issn = {0168-9274}
 }
 
 @BOOK{ElmanSilvesterWathen2005,
@@ -2433,7 +2342,6 @@
   volume = {90},
   pages = {665--688},
   number = {4},
-  issn = {0029-599X}
 }
 
 @ARTICLE{Engsig-KarupHesthavenBinghamEtAl2006,
@@ -2446,12 +2354,6 @@
   pages = {351--370},
   number = {3},
   coden = {JLEMAU},
-  fjournal = {Journal of Engineering Mathematics},
-  issn = {0022-0833},
-  mrclass = {76M10 (65M60 76B15)},
-  mrnumber = {MR2292682 (2007k:76089)},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{EnzmannPelc1991,
@@ -2603,13 +2505,6 @@
   volume = {25},
   pages = {1142--1157},
   number = {4},
-  category = {articles},
-  duplicate = {True},
-  issn = {1064-8275},
-  owner = {logg},
-  simula = {ok},
-  status = {published},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ErikssonJohnsonLogg2003a,
@@ -2620,9 +2515,6 @@
   volume = {25},
   pages = {1142--1157},
   number = {3},
-  issn = {1064-8275},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{ErikssonJohnsonThomA©e1985,
@@ -2633,8 +2525,6 @@
   year = {1985},
   volume = {19},
   pages = {611--643},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Estep1995,
@@ -2813,9 +2703,6 @@
   year = {2002},
   volume = {21},
   pages = {147-164},
-  issn = {0332-1649},
-  owner = {elezar},
-  timestamp = {2009.12.24},
   url = {http://dx.doi.org/10.1108/03321640210410814}
 }
 
@@ -3047,12 +2934,9 @@
   journal = {J. Phys. Chem.},
   year = {1977},
   volume = {81},
-  pages = {2340-2361},
+  pages = {2340--2361},
   number = {25},
-  file = {Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF;Gill_1977_2340.pdf:Gill_1977_2340.pdf:PDF},
-  issn = {0022-3654},
-  timestamp = {2008.09.17},
-  url = {http://pubs3.acs.org/acs/journals/doilookup?in_doi=10.1021/j100540a008}
+  url = {http://dx.doi.org/10.1021/j100540a008}
 }
 
 @BOOK{GiraultRaviart1986,
@@ -3061,13 +2945,8 @@
   year = {1986},
   author = {V. Girault and P.-A. Raviart},
   volume = {5},
-  pages = {x+374},
   series = {Springer Series in Computational Mathematics},
   address = {Berlin},
-  note = {Theory and algorithms},
-  isbn = {3-540-15796-4},
-  owner = {kent-and},
-  timestamp = {2009.06.08}
 }
 
 @ARTICLE{Goda1979,
@@ -3077,27 +2956,9 @@
   journal = {Journal of Computational Physics},
   year = {1979},
   volume = {30},
-  pages = {76 - 95},
+  pages = {76--95},
   number = {1},
-  doi = {DOI: 10.1016/0021-9991(79)90088-3},
-  issn = {0021-9991}
-}
-
-@BOOK{GolubLoan1989,
-  title = {Matrix Computations},
-  publisher = {Johns Hopkins University Press},
-  year = {1989},
-  author = {G.H. Golub and C.F. van Loan}
-}
-
-@BOOK{Golub1996,
-  title = {Matrix Computations},
-  publisher = {The Johns Hopkins University Press},
-  year = {1996},
-  author = {Gene H. Golub and Charles F. {van Loan}},
-  edition = {third},
-  owner = {logg},
-  timestamp = {2009.06.06}
+  url = {http://dx.doi.org/10.1016/0021-9991(79)90088-3},
 }
 
 @BOOK{GolubVan1996,
@@ -3105,15 +2966,9 @@
   publisher = {Johns Hopkins University Press},
   year = {1996},
   author = {Golub, Gene H. and Van Loan, Charles F.},
-  pages = {xxx+698},
   series = {Johns Hopkins Studies in the Mathematical Sciences},
   address = {Baltimore, MD},
   edition = {Third},
-  isbn = {0-8018-5413-X; 0-8018-5414-8},
-  mrclass = {65-02 (65Fxx)},
-  mrnumber = {MR1417720 (97g:65006)},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{GratschBathe2006,
@@ -3142,19 +2997,6 @@
   timestamp = {2009.02.13}
 }
 
-@ARTICLE{GreensteinEtAl2002,
-  author = {Joseph L Greenstein and Raimond L Winslow},
-  title = {An integrative model of the cardiac ventricular myocyte incorporating
-	local control of {C}a$^{2+}$ release.},
-  journal = {Biophys. J.},
-  year = {2002},
-  volume = {83},
-  pages = {2918--2945},
-  number = {6},
-  month = {Dec},
-  url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
-}
-
 @ARTICLE{GreensteinWinslow2002,
   author = {J. L. Greenstein and R. L. Winslow},
   title = {An integrative model of the cardiac ventricular myocyte incorporating
@@ -3166,9 +3008,7 @@
   number = {6},
   month = {Dec},
   key = {97},
-  pmid = {12496068},
-  timestamp = {2009.08.10},
-  url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
+  url = {http://dx.doi.org/10.1016/S0006-3495(02)75301-0}
 }
 
 @ARTICLE{GreitzEricsonFlodmark1999,
@@ -3195,7 +3035,7 @@
 @BOOK{GroppLuskSkjellum1999,
   title = {Using {MPI} -- Portable Parallel Programming with the Message-Passing
 	Interface},
-  publisher = {The {MIT} Press},
+  publisher = {The MIT Press},
   year = {1999},
   author = {W. Gropp and E. Lusk and A. Skjellum},
   edition = {2nd},
@@ -3221,25 +3061,18 @@
   volume = {192},
   pages = {262--276},
   number = {1},
-  address = {San Diego, CA, USA},
   doi = {http://dx.doi.org/10.1016/j.jcp.2003.07.009},
-  issn = {0021-9991},
-  publisher = {Academic Press Professional, Inc.}
 }
 
 @ARTICLE{GuiaSternLakattaEtAl2001,
   author = {A. Guia and M. D. Stern and E. G. Lakatta and I. R. Josephson},
   title = {Ion concentration-dependence of rat cardiac unitary L-type calcium
-	channel conductance.},
+	channel conductance},
   journal = {Biophys J},
   year = {2001},
   volume = {80},
   pages = {2742--2750},
   number = {6},
-  month = {Jun},
-  pii = {S0006-3495(01)76242-X},
-  pmid = {11371449},
-  timestamp = {2009.03.06},
   url = {http://dx.doi.org/10.1016/S0006-3495(01)76242-X}
 }
 
@@ -3318,27 +3151,17 @@
   pages = {xvi+601},
   series = {Springer Series in Computational Mathematics},
   address = {Berlin},
-  isbn = {3-540-53775-9},
-  mrclass = {65-02 (34A45 65Lxx)},
-  mrnumber = {MR1111480 (92a:65016)},
-  mrreviewer = {Peter D. Robinson},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{HansboHansbo2002,
   author = {Hansbo, A. and Hansbo, P.},
-  title = {An unfitted finite element method, based on Nitscheâs method, for
+  title = {An unfitted finite element method, based on Nitsche's method, for
 	elliptic interface problems},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2002},
   volume = {191},
   pages = {5537--5552},
   number = {47-48},
-  file = {:HanHan2002.pdf:PDF},
-  owner = {massing},
-  publisher = {Elsevier},
-  timestamp = {2009.05.06}
 }
 
 @ARTICLE{HansboHansboLarson2003a,
@@ -3349,21 +3172,16 @@
   volume = {37},
   pages = {495--514},
   number = {3},
-  file = {:HanHanLar2003.pdf:PDF},
-  issn = {1209--3841}
 }
 
 @ARTICLE{Hansbo2005,
   author = {Hansbo, P.},
-  title = {Nitsche?s method for interface problems in computational mechanics},
+  title = {Nitsche's method for interface problems in computational mechanics},
   journal = {GAMM-Mitt},
   year = {2005},
   volume = {28},
   pages = {183--206},
   number = {2},
-  file = {:Hansbo2005.pdf:PDF},
-  owner = {massing},
-  timestamp = {2009.05.07}
 }
 
 @ARTICLE{Hansbo2001,
@@ -3374,8 +3192,6 @@
   year = {2001},
   volume = {17},
   pages = {863--869},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{HansboHermansson2003,
@@ -3387,26 +3203,18 @@
   volume = {32},
   pages = {134--139},
   number = {1-2},
-  file = {:HansboHermansson2003.pdf:PDF},
-  owner = {massing},
-  publisher = {Springer},
-  timestamp = {2009.05.06}
 }
 
 @ARTICLE{HansboHermanssonSvedberg2004,
   author = {Hansbo, P. and Hermansson, J. and Svedberg, T.},
-  title = {{Nitsche's method combined with space--time finite elements for ALE
-	fluid--structure interaction problems}},
+  title = {Nitsche's method combined with space--time finite elements for {ALE}
+	fluid--structure interaction problems},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2004},
   volume = {193},
   pages = {4195--4206},
   number = {39-41},
-  doi = {doi:10.1016/j.cma.2003.09.029},
-  file = {:HansboHermanssonSvedberg2004.pdf:PDF},
-  owner = {massing},
-  publisher = {Elsevier},
-  timestamp = {2009.05.13}
+  url = {http://dx.doi.org/10.1016/j.cma.2003.09.029},
 }
 
 @ARTICLE{HansboLarson2002,
@@ -3423,10 +3231,8 @@
   year = {2003},
   volume = {37},
   pages = {63--72},
-  doi = {10.1051/m2an:2003020},
+  url = {http://dx.doi.org/10.1051/m2an:2003020},
   issue = {1},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @MISC{HansenWollman,
@@ -3504,9 +3310,7 @@
   volume={213},
   number={1},
   pages={14--34},
-  issn={0377-0427},
   year={2008},
-  publisher={Elsevier}
 }
 
 @ARTICLE{HentschelMardalLovgren2010,
@@ -3530,9 +3334,6 @@
   volume = {19},
   pages = {897--908},
   number = {11},
-  file = {:HermanssonHansbo2003.pdf:PDF},
-  owner = {selim},
-  publisher = {John Wiley \& Sons}
 }
 
 @TECHREPORT{HernandezRomanRomeroEtAl2009,
@@ -3568,25 +3369,7 @@
   volume = {31},
   pages = {397--423},
   number = {3},
-  doi = {http://doi.acm.org/10.1145/1089014.1089021},
-  issn = {0098-3500},
-  owner = {logg},
-  publisher = {ACM Press},
-  timestamp = {2009.06.06}
-}
-
-@TECHREPORT{HerouxBartlettHoekstraEtAl2003,
-  author = {Michael Heroux and Roscoe Bartlett and Vicki Howle Robert Hoekstra
-	and Jonathan Hu and Tamara Kolda and Richard Lehoucq and Kevin Long
-	and Roger Pawlowski and Eric Phipps and Andrew Salinger and Heidi
-	Thornquist and Ray Tuminaro and James Willenbring and Alan Williams
-	},
-  title = {An Overview of {T}rilinos},
-  institution = {Sandia National Laboratories},
-  year = {2003},
-  number = {SAND2003-2927},
-  owner = {logg},
-  timestamp = {2009.06.06}
+  url = {http://dx.doi.org/10.1145/1089014.1089021},
 }
 
 @ARTICLE{HestenesStiefel1952,
@@ -3626,10 +3409,7 @@
   volume = {210},
   pages = {342--367},
   number = {1},
-  address = {San Diego, CA, USA},
-  doi = {http://dx.doi.org/10.1016/j.jcp.2005.04.013},
-  issn = {0021-9991},
-  publisher = {Academic Press Professional, Inc.}
+  url = {http://dx.doi.org/10.1016/j.jcp.2005.04.013},
 }
 
 @ARTICLE{HilberHughesTaylor1977,
@@ -3693,8 +3473,6 @@
   volume = {6},
   pages = {133--152},
   number = {Dec.},
-  note = {Special issue on multilevel methods (Copper Mountain, CO, 1997)},
-  issn = {1068-9613}
 }
 
 @ARTICLE{HiptmairXu2007,
@@ -3749,7 +3527,8 @@
   title = {Computation of mean drag for bluff body problems using Adaptive DNS/LES},
   journal = {SIAM J. Sci. Comput.},
   year = {2005},
-  volume = {27(1)},
+  volume = {27},
+  number = {1},
   pages = {184-207}
 }
 
@@ -3760,14 +3539,6 @@
   year = {2002},
   owner = {logg},
   timestamp = {2009.06.06}
-}
-
-@BOOK{HoffmanJanssonLoggEtAl,
-  title = {DOLFIN},
-  publisher = {{\tt http://www.fenics.org/dolfin/}},
-  author = {J. Hoffman and J. Jansson and A. Logg and G. N. Wells and others},
-  owner = {logg},
-  timestamp = {2009.06.07}
 }
 
 @ARTICLE{HoffmanJanssonStockli2009,
@@ -3813,17 +3584,6 @@
   pages = {2865--2880}
 }
 
-@ARTICLE{HoffmanJohnson2005,
-  author = {J. Hoffman and C. Johnson},
-  title = {A New Approach to Computational Turbulence Modeling},
-  journal = {Comput. Meth. Appl. Mech. Engrg},
-  year = {2005},
-  volume = {195},
-  pages = {2863--3182},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @INBOOK{HoffmanJohnson2004,
   title = {Encyclopedia of Computational Mechanics, Volume 3, Chapter 7: Computability
 	and Adaptivity in {CFD}},
@@ -3861,17 +3621,6 @@
   author = {J. Hoffman and A. Logg},
   year = {2004},
   url = {http://www.fenics.org/puffin/},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
-@TECHREPORT{HoffmanLogg2002,
-  author = {J. Hoffman and A. Logg},
-  title = {{DOLFIN}: {D}ynamic {O}bject oriented {L}ibrary for {FIN}ite element
-	computation},
-  institution = {Chalmers Finite Element Center Preprint Series},
-  year = {2002},
-  number = {7},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -3982,13 +3731,6 @@
   volume = {59},
   pages = {85--99},
   number = {1},
-  coden = {CMMECC},
-  fjournal = {Computer Methods in Applied Mechanics and Engineering},
-  issn = {0045-7825},
-  mrclass = {76-08 (35Q10 65N30 76D07)},
-  mrnumber = {MR868143 (89j:76015d)},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{HughesLevitWinget1983,
@@ -3999,8 +3741,6 @@
   year = {1983},
   volume = {36},
   pages = {241--254},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{HughesLevitWinget1983a,
@@ -4010,8 +3750,6 @@
   year = {1983},
   volume = {109},
   pages = {576--585},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Hulme1972,
@@ -4103,7 +3841,10 @@
 	Ingebrigtsen},
   title = {Determination of wall tension in cerebral artery aneurysms by numerical
 	simulation},
-  journal = {NEUROSURGERY},
+  journal = {Stroke},
+  volume = {39},
+  pages = {172-3178},
+  url = {http://dx.doi.org/10.1161/STROKEAHA.107.503698},
   year = {2008}
 }
 
@@ -4117,7 +3858,7 @@
 @ARTICLE{JafriRiceWinslow1998,
   author = {M. S. Jafri and J. J. Rice and R. L. Winslow},
   title = {Cardiac {C}a$^{2+}$ dynamics: the roles of ryanodine receptor adaptation
-	and sarcoplasmic reticulum load.},
+	and sarcoplasmic reticulum load},
   journal = {Biophys. J.},
   year = {1998},
   volume = {74},
@@ -4773,14 +4514,16 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{KirbyScott2007,
-  author = {Kirby, R.C. and Scott, L.R.},
-  journal = {SIAM Journal on Scientific Computing},
-  volume = {29},
-  number = {2},
-  pages = {827--841},
-  year = {2008},
+@article{KirbyScott2007,
+ author = {Kirby, Robert C. and Scott, L. Ridgway},
+ title = {Geometric Optimization of the Evaluation of Finite Element Matrices},
+ journal = {SIAM J. Sci. Comput.},
+ volume = {29},
+ year = {2007},
+ pages = {827--841},
+ url = {http://dx.doi.org/10.1137/060660722},
 }
+
 
 @ARTICLE{KirbyStroutHovlandEtAl2005,
   author = {Robert C. Kirby and Michelle Mills Strout and Paul Hovland and L.
@@ -8720,18 +8463,6 @@
   url = {http://fenics.org/instant}
 }
 
-@TECHREPORT{WhaleyDongarra1997,
-  author = {R. Clint Whaley and Jack Dongarra},
-  title = {{Automatically Tuned Linear Algebra Software}},
-  institution = {University of Tennessee},
-  year = {1997},
-  number = {UT-CS-97-366},
-  month = {December},
-  url = {http://www.netlib.org/lapack/lawns/lawn131.ps},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @ARTICLE{WhaleyPetitetDongarra2001,
   author = {R. Clint Whaley and Antoine Petitet and Jack J. Dongarra},
   title = {Automated Empirical Optimization of Software and the {ATLAS} Project},
@@ -8740,10 +8471,7 @@
   volume = {27},
   pages = {3--35},
   number = {1--2},
-  note = {Also available as University of Tennessee LAPACK Working Note \#147,
-	UT-CS-00-448, 2000 ({\tt www.netlib.org/lapack/lawns/lawn147.ps})},
-  owner = {logg},
-  timestamp = {2009.06.06}
+  url = {http://dx.doi.org/10.1016/S0167-8191(00)00087-9}
 }
 
 @BOOK{White1999,
