--- a/book.tex
+++ b/book.tex
@@ -49,7 +49,7 @@
 \fenicsinput{logg-3}
 %\fenicsinput{oelgaard-2}
 %\fenicsinput{kirby-8}
-%\fenicsinput{kirby-4}
+\fenicsinput{kirby-4}
 %\fenicsinput{hoffman-4}
 
 \part{Implementation}
