--- a/unfinished/hentschel/chapter.tex
+++ b/unfinished/hentschel/chapter.tex
@@ -232,8 +232,9 @@ set equal in every grid point, and scaled to match the volume
 transport of 0.27 ml.
 
 \begin{figure}\begin{center}
-\includegraphics[width = 0.5\textwidth]{chapters/hentschel/pdf/sin_pulse.pdf}
-\caption{Two different CSF flow pulses.}
+\includegraphics[width = 0.8\textwidth]{chapters/hentschel/pdf/sin_pulse.pdf}
+\caption{Two different CSF flow pulses. The blue line is a sine pulse,
+    whereas the green represent the pressure pulse in a heart chamber.}
 \label{fig:sin_pulse}.
 \end{center}\end{figure}
 
@@ -518,7 +519,7 @@ We may then change to "Mesh modus" in the interactive panel and press \emp{3d} t
 
 \begin{figure}\begin{center}
 \includegraphics[width=100mm]{chapters/hentschel/pdf/gmsh.pdf}
-\caption{Gmsh mesh.}
+\caption{The figure shows the user-interface of Gmsh during the making of a mesh.}
 \label{fig:Gmsh_mesh}.
 \end{center}\end{figure}
 
@@ -580,7 +581,9 @@ The simulation results for an appropriate mesh can be found in Figure \ref{fig:c
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_sysmax_nmb7.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_sysdia_nmb18.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_diamin1_nmb25.pdf}
-\caption{Case: Circular cord. The velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$. Notice that we use different color scales for the different time steps. The same color scales
+\caption{The case with a circular cord and the boundary condition based on
+the pressure pulse in the heart~\cite{SmithChase2ShawEtAl2006}. 
+The pictures show the velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$. Notice that we use different color scales for the different time steps. The same color scales
 will be used in all subsequent figures. }
 \label{fig:case1}.
 \end{center}\end{figure}
@@ -688,7 +691,8 @@ The pulse and the sine are sketched in Figure \ref{fig:sin_pulse}. Both function
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/sin_sysmax_nmb2.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/sin_sysdia_nmb4.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/sin_diamin_nmb6.pdf}
-\caption{Case: Circular Cord. The velocity in z-direction as response to a sine boundary condition for the time steps $t=0.2, 0.4, 0.6$.}
+\caption{The case with circular cord and the boundary condition based on a
+    sine function. The pictures show the velocity in z-direction as response to a sine boundary condition for the time steps $t=0.2, 0.4, 0.6$.}
 \label{fig:case2}.
 \end{center}\end{figure}
 
@@ -727,7 +731,9 @@ Also for this case the pressure field was identical, with some variations in the
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_sysmax_nmb7.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_sysdia_nmb18.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_diamin1_nmb25.pdf}
-\caption{Case: Elliptic cord. The velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$.}
+\caption{The case with an elliptic cord and the boundary condition based on
+the pressure pulse in the heart. The pictures show the velocity in z-direction for the non-symmetric pulse at 
+the time steps $t=0.07s, 0.18s, 0.25s$.}
 \label{fig:case3}.
 \end{center}\end{figure}
 
@@ -737,7 +743,7 @@ Also for this case the pressure field was identical, with some variations in the
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_eccentric_sysmax_nmb7.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_eccentric_sysdia_nmb18.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_eccentric_diamin1_nmb25.pdf}
-\caption{Case: Translated elliptic cord. The velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$.}
+\caption{The case with and translated elliptic cord. The pictures show the velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$.}
 \label{fig:case3b}.
 \end{center}\end{figure}
 
@@ -747,7 +753,8 @@ Also for this case the pressure field was identical, with some variations in the
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_syrinx_f1_08_syrinx05_sysmax_nmb7.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_syrinx_f1_08_syrinx05_sysdia_nmb18.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_syrinx_f1_08_syrinx05_diamin1_nmb25.pdf}
-\caption{Case: Enlarged cord diameter. The velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$.}
+\caption{The case with an enlarged cord diameter and the boundary
+    conditions based on the pressure pulse. The pictures show the velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$.}
 \label{fig:case4}
 \end{center}\end{figure}
 
