--- a/book.tex
+++ b/book.tex
@@ -56,7 +56,7 @@
 
 %\fenicsinput{logg-2}
 \fenicsinput{logg-1}
-%\fenicsinput{kirby-3}
+\fenicsinput{kirby-3}
 %\fenicsinput{kirby-2}
 %\fenicsinput{wilbers}
 %\fenicsinput{alnes-3}
