--- a/unfinished/mardal-4/chapter.tex
+++ b/unfinished/mardal-4/chapter.tex
@@ -37,7 +37,7 @@ of the Hodge Laplacian.
 \section{Abstract Framework for Constructing Preconditioners}
 
 This presentation of preconditioning is largely taken from the
-review paper~\cite{MardalWinther}, where a more comprehensive mathematical
+review paper~\citep{MardalWinther11}, where a more comprehensive mathematical
 presentation is given. Consider the following abstract formulation
 of a linear PDE problem:  
 Find $u$ in a Hilbert space $H$ such that: 
@@ -129,7 +129,8 @@ It is well-known that
 $\mathcal{A}$ is a bounded invertible operator from $H^1 \cap L^2_0$ into its dual space. 
 Furthermore, it is well-known that one can construct multigrid preconditioners for this operator
 such that the preconditioner is spectrally equivalent with the inverse of $\mathcal{A}$, independent of the
-characteristic size of the cells in the mesh~\cite{Bramble1993,Hackbusch, TOS2001}. 
+characteristic size of the cells in the
+mesh~\citep{Bramble1993,Hackbusch1994,TrottenbergOosterleeSchuller2001}. 
 
 In this example, we use a multigrid preconditioner based on the algebraic multigrid
 package ML contained in PyTrilinos\index{PyTrilinos}. Furthermore, we will estimate the eigenvalues
@@ -202,7 +203,7 @@ def precondconjgrad_eigest(B, A, x, b, tolerance=1.0E-05,
     return x, e, iter
 \end{python}
 The intermediate variables called alphas and betas can then be used to estimate the condition number of
-the preconditioned matrix as follows, see eg.~\cite{Saad2003}. 
+the preconditioned matrix as follows, see eg.~\citep{Saad2003}. 
 Notice that since the preconditioned Conjugate Gradient method 
 converges quite fast when using algebraic multigrid (AMG)\index{AMG} as a preconditioner, there will be only a small
 number of alphas and betas. Therefore we use the dense linear algebra tools in 
@@ -317,7 +318,8 @@ where
 \end{eqnarray}
 and $B^*$ is the adjoint of $B$.  
 Then it is well-known that $\mathcal{A}$ is a bounded operator from
-$H^1_g \times L_0^2$ to its dual $H_g^{-1} \times L_0^2$, see e.g.~\cite{Brezzi1974,BrezziFortin}. Therefore, we 
+$H^1_g \times L_0^2$ to its dual $H_g^{-1} \times L_0^2$, see
+e.g.~\citep{Brezzi1974,BrezziFortin1991}. Therefore, we 
 construct a preconditioner, 
 $\mathcal{B}: H_g^{-1} \times L_0^2 \rightarrow H^1_g \times L_0^2$
 defined as 
@@ -331,7 +333,7 @@ where
 (K u, v) &=& \int_\Omega \nabla u: \nabla v \, dx \\ 
 (L p, q) &=& \int_\Omega p \, q \, dx .   
 \end{eqnarray}
-We refer to \cite{MardalWinther} for a mathematical explanation of the derivation 
+We refer to \citep{MardalWinther11} for a mathematical explanation of the derivation 
 of such preconditioners. 
 Notice that this operator $\mathcal{B}$ is  positive in contrast to $\mathcal{A}$. Hence, 
 the preconditioned operator $\mathcal{B} \mathcal{A}$ will be indefinite. For both 
@@ -340,7 +342,7 @@ described in the previous example (A simple Jacobi preconditioner
 would be sufficient for $L$).
 For symmetric  indefinite problems the \emph{Minimum Residual Method} is
 the fastest method. Preconditioners of this form has been studied by
-many~\cite{ElmanSilvesterWathen2005,R-W-92,S-W-93,S-W-94}. 
+many~\citep{ElmanSilvesterWathen2005,RustenWinther1992,SilvesterWathen1993,SilvesterWathen1994}. 
 
 In Table~\ref{stokes:ex} 
 we present the number of iterations needed for convergence 
@@ -497,9 +499,9 @@ u - \nabla p &=& f, \quad \Omega \\
 This problem is not an well-defined operator from 
 $H^1_0 \times L_0^2$ into its dual. Instead, it
 is a mapping from $H(div) \times L_0^2$  to its dual. 
-However, as pointed out in \cite{MardalWinther2004} this operator
+However, as pointed out in \citep{MardalWinther2004} this operator
 can also be seen as an operator $L^2 \times H^1$ to its dual.  
-In fact, in \cite{MardalTaiWinther2002a,M-W-04} it was shown that 
+In fact, in \citep{MardalTaiWinther2002a,MardalWinther2004} it was shown that 
  $A$ is a bounded operator from
 $L^2 \cap k^{1/2} H^1_0 \times H^1 \cap L_0^2 + k^{-1/2} L_0^2$ to its dual space
 with a bounded inverse. Furthermore, the bounds are uniform in $k$. 
@@ -521,9 +523,10 @@ where
 (L p, q) &=& \int_\Omega k^{-1} p q \, dx \\   
 (M p, q) &=& \int_\Omega \nabla p \cdot  \nabla q \, dx .   
 \end{eqnarray}
-Again we refer to \cite{MardalWinther} and references therein,  for an overview and more comprehensive mathematical derivation 
+Again we refer to \citep{MardalWinther11} and references therein,  for an overview and more comprehensive mathematical derivation 
 of the construction of such preconditioners.  
-Preconditioners of this form has been studied by many, c.f. e.g. ~\cite{CahouetChabard1988, E-S-W-text, M-W-04, M-W-09, T-99}. 
+Preconditioners of this form has been studied by many, c.f. e.g.
+~\citep{CahouetChabard1988,ElmanSilvesterWathen2005,MardalWinther2004,MardalWinther11,Turek1999}. 
 
 \begin{table}
 \begin{center}
@@ -604,11 +607,12 @@ Find $u, p \in H_0(\operatorname{curl}) \times H^1_0$ such that
 \end{eqnarray}
 Hence, it is natural to consider preconditioner a for $H(\operatorname{curl})$ problems
 (in addition to $H^1$ preconditioners). Such preconditioners have
-been considered by many c.f. e.g. ~\cite{ArnoldFalkWinther1997Hdiv,A-F-W-00, Hip97, Hip99}.   
+been considered by many c.f. e.g.
+~\cite{ArnoldFalkWinther1997a,ArnoldFalkWinther2000,Hiptmair1997,Hiptmair1999}.   
 One important observation in these papers is that point-wise smoothers
 are not appropriate for geometric multigrid methods. Furthermore, 
 for algebraic multigrid methods, extra care has to be taken for the
-aggregation step~\cite{GeeSiefertHuEtAl2006,maxwell-amg}. 
+aggregation step~\cite{GeeSiefertHuEtAl2006,HuTuminaroBochevEtAl2006}. 
 
 Let 
 \[
@@ -742,9 +746,11 @@ an alternative to PyTrilinos is PyAMG~\cite{BellOlsonSchroder2009} which can be 
 
 
 We have shown the implementation of block preconditioners for a few selected problems. 
-Block preconditioners have been used in a varity of applications, we refer to \cite{MardalWinther}
+Block preconditioners have been used in a varity of applications, we refer
+to \citep{MardalWinther11}
 and the references therein for a more complete discussion on this topic. 
-For an overview of similar and alternative preconditioning techniques cf. eg.~\cite{BenziGolubLiesen2005,E-S-W-text}. 
+For an overview of similar and alternative preconditioning techniques cf.
+eg.~\citep{BenziGolubLiesen2005,ElmanSilvesterWathen2005}. 
 
 
 
