--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1046,11 +1046,23 @@
   url = {http://dx.doi.org/10.1145/503032.503047}
 }
 
-@ELECTRONIC{Blackburn2009,
+@article{Blackburn2004,
+ author = {Blackburn, H. M. and Sherwin, S. J.},
+ title = {Formulation of a {G}alerkin spectral element-{F}ourier method for
+ three-dimensional incompressible flows in cylindrical geometries},
+ journal = {J. Comput. Phys.},
+ volume = {197},
+ issue = {2},
+ year = {2004},
+ pages = {759--778},
+ url = {http://dx.doi.org/10.1016/j.jcp.2004.02.013},
+}
+
+@MISC{Blackburn2009,
   author = {H. Blackburn},
-  year = {2009},
+  year = {2011},
   title = {Semtex},
-  url = {http://users.monash.edu.au/bburn/semtex.html}
+  url = {http://users.monash.edu.au/~bburn/semtex.html}
 }
 
 @ARTICLE{BlackfordDemmelDongarraEtAl2002,
@@ -4938,22 +4950,22 @@
   number = {6},
   abstract = {We consider computation of the displacement of an elastic object immersed
 	into a
-	
+
 	viscous incompressible flow. For simplicity, we assume that the mechanics
 	of the solid
-	
+
 	is governed by linear elasticity and the motion of the fluid by the
 	Stokes equation.
-	
+
 	We derive an a posteriori error estimate for this one way coupled
 	problem using
-	
+
 	duality techniques. Based on these estimates we develop an adaptive
 	algorithm that
-	
+
 	automatically constructs a suitable adapted mesh for the fluid and
 	solid domains
-	
+
 	given goal quantities specified on the solid problem},
   file = {:BengtzonLarson2009.pdf:PDF},
   owner = {massing},
@@ -4971,29 +4983,29 @@
   pages = {113--130},
   number = {1},
   abstract = {In this paper we analyze a family of discontinuous Galerkin
-	
+
 	methods, parameterized by two real parameters, for elliptic problems
 	in one
-	
+
 	dimension. Our main results are: (1) a complete inf-sup stability
 	analysis char-
-	
+
 	acterizing the parameter values yielding a stable scheme and energy
 	norm
-	
+
 	error estimates as a direct consequence thereof, (2) an analysis of
 	the error
-	
+
 	in L2 where the standard duality argument only works for special parameter
-	
+
 	values yielding a symmetric bilinear form and different orders of
 	conver-
-	
+
 	gence are obtained for odd and even order polynomials in the nonsymmetric
-	
+
 	case. The analysis is consistent with numerical results and similar
 	behavior
-	
+
 	is observed in two dimensions.},
   file = {:BengtzonLarson2009.pdf:PDF},
   owner = {massing},
@@ -5011,25 +5023,25 @@
   number = {8},
   abstract = {We investigate the characteristics and performance of goal-oriented
 	a posteriori error measures for a
-	
+
 	class of non-linear elasticity models, while restriction is made to
 	small strain theory. The chosen error
-	
+
 	measure of the displacement ÿeld can be global or local (probing the
 	chosen quantity in a speciÿc
-	
+
 	spatial point). The error is computable with the aid of the solution
 	of a dual problem whose data
-	
+
 	depend on the error measure. The main thrust of the paper is to evaluate
 	the performance of a few
-	
+
 	di erent approximation strategies for computing the dual solution.
 	The chosen strategies are compared
-	
+
 	in terms of accuracy, ease of implementation, reliability and cost-e
 	ciency. A well-known numerical
-	
+
 	example, the Cook’s membrane, is used for the numerical evaluations.},
   file = {:LarssonHansboRunesson2002.pdf:PDF},
   owner = {massing},
@@ -5300,33 +5312,33 @@
   number = {2},
   abstract = {The finite element method can be viewed as a machine that automates
 	the discretization of differential
-	
+
 	equations, taking as input a variational problem, a finite element
 	and a mesh, and producing as output
-	
+
 	a system of discrete equations. However, the generality of the framework
 	provided by the finite element
-	
+
 	method is seldom reflected in implementations (realizations), which
 	are often specialized and can handle
-	
+
 	only a small set of variational problems and finite elements (but
 	are typically parametrized over the choice
-	
+
 	of mesh).
-	
+
 	This paper reviews ongoing research in the direction of a complete
 	automation of the finite element method.
-	
+
 	In particular, this work discusses algorithms for the efficient and
 	automatic computation of a system of
-	
+
 	discrete equations from a given variational problem, finite element
 	and mesh. It is demonstrated that by
-	
+
 	automatically generating and compiling efficient low-level code, it
 	is possible to parametrize a finite element
-	
+
 	code over variational problem and finite element in addition to the
 	mesh.},
   file = {:Log2007.pdf:PDF},
@@ -6049,8 +6061,10 @@
   author = {K.-A. Mardal and R. Winther},
   title = {Preconditioning discretizations of systems of partial differential
 	equations},
-  journal = {Numerical Linear Algebra with Applications (In Press)},
-  url = {http://dx.doi.org/10.1002/nla.716}
+  journal = {Numerical Linear Algebra with Applications},
+  year = {2011},
+  url = {http://dx.doi.org/10.1002/nla.716},
+  note = {To appear}
 }
 
 @ARTICLE{MardalWinther2006,
@@ -6775,7 +6789,7 @@
 }
 
 @ARTICLE{PanditKalitaDalal2007,
-  author = {Pandit,, Swapan K. and Kalita,, Jiten C. and Dalal, D. C.},
+  author = {Pandit, Swapan K. and Kalita, Jiten C. and Dalal, D. C.},
   title = {A transient higher order compact scheme for incompressible viscous
 	flows on geometries beyond rectangular},
   journal = {J. Comput. Phys.},
@@ -6783,17 +6797,14 @@
   volume = {225},
   pages = {1100--1124},
   number = {1},
-  address = {San Diego, CA, USA},
-  doi = {http://dx.doi.org/10.1016/j.jcp.2007.01.016},
-  issn = {0021-9991},
-  publisher = {Academic Press Professional, Inc.}
+  url = {http://dx.doi.org/10.1016/j.jcp.2007.01.016},
 }
 
 @BOOK{Panton1984,
   title = {Incompressible flow},
   publisher = {John Wiley \& Sons Inc},
   year = {1984},
-  author = {Panton, RL}
+  author = {Panton, R. L.}
 }
 
 @ARTICLE{PasciakWang2006,
@@ -6946,7 +6957,9 @@
   journal = {Bell System Technical Journal},
   year = {1957},
   volume = {36},
-  pages = {1389--1401}
+  number = {6},
+  pages = {1389--1401},
+  url = {http://bstj.bell-labs.com/BSTJ/images/Vol36/bstj36-6-1389.pdf}
 }
 
 @INPROCEEDINGS{Prudhomme2006,
@@ -8769,11 +8782,6 @@
   title = {{Rikshospitalet}},
   note = {\emph{www.rikshospitalet.no/}},
   key = {{Rikshospitalet}}
-}
-
-@ELECTRONIC{Semtex,
-  title = {Semtex spectral element {DNS} code},
-  url = {http://users.monash.edu.au/~bburn/semtex.html}
 }
 
 @UNPUBLISHED{Siloon,
