--- a/book.tex
+++ b/book.tex
@@ -68,7 +68,7 @@
 \part{Applications}
 
 %\fenicsinput{terrel}
-%\fenicsinput{kvs-1}
+\fenicsinput{kvs-1}
 %\fenicsinput{mortensen}
 %\fenicsinput{hoffman-1}
 %\fenicsinput{selim}
