--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,18 +19,6 @@
   timestamp = {2009.06.06}
 }
 
-@article{ArnoldBrezziFortin1984,
-  author = {Arnold, D. N. and Brezzi, F. and Fortin, M.},
-  title = {A stable finite element for the {S}tokes equations},
-  journal = {Calcolo},
-  fjournal = {Calcolo. A Quarterly on Numerical Analysis and Theory of Computation},
-  volume = {21},
-  year = {1984},
-  number = {4},
-  pages = {337--344 (1985)},
-  pdf = {http://umn.edu/~arnold/papers/mini.pdf}
-}
-
 @ARTICLE{OlgaardLoggWells2008,
   author = {K. B. \O{}lgaard and A. Logg and G. N. Wells},
   title = {Automated code generation for discontinuous {G}alerkin methods},
@@ -403,7 +391,6 @@
   volume = {1},
   pages = {347--367},
   number = {2},
-  issue = {2},
   url = {http://dx.doi.org/10.1007/BF03167064}
 }
 
@@ -413,8 +400,8 @@
   journal = {Calcolo},
   year = {1984},
   volume = {21},
-  pages = {337-344},
-  issue = {4},
+  pages = {337--344},
+  number = {4},
   url = {http://dx.doi.org/10.1007/BF02576171}
 }
 
