--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3524,16 +3524,6 @@
   volume = {Online First December 2008}
 }
 
-@BOOK{HoffmanJohnson2006,
-  title = {Computational Turbulent Incompressible Flow: Applied Mathematics:
-	Body and Soul Vol 4},
-  publisher = {Springer-Verlag},
-  year = {2006},
-  author = {J. Hoffman and C. Johnson},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @ARTICLE{HoffmanJohnson2006a,
   author = {Johan Hoffman and Claes Johnson},
   title = {A new approach to Computational Turbulence Modeling},
@@ -4046,11 +4036,12 @@
   timestamp = {2009.06.06}
 }
 
-@BOOK{JohnsonHoffman2007,
+@BOOK{HoffmanJohnson2007,
   title = {Computational Turbulent Incompressible Flow},
   publisher = {Springer},
   year = {2007},
-  author = {Claes Johnson and Johan Hoffman}
+  author = {Johan Hoffman and Claes Johnson},
+  url = {http://dx.doi.org/10.1007/978-3-540-46533-1}
 }
 
 @INPROCEEDINGS{JohnsonHoffmanLogg2001,
